--- a/config/recipes/templates/nginx.conf.erb
+++ b/config/recipes/templates/nginx.conf.erb
@@ -10,23 +10,23 @@ worker_rlimit_nofile  65535;
 
 
 events {
-    worker_connections  65535;
-    use epoll;
+worker_connections  65535;
+use epoll;
 }
 
 
 http {
-    include  mime.types;
-    default_type  application/octet-stream;
-    keepalive_timeout  60;
-    sendfile  on;
-    gzip  on;
+include  mime.types;
+default_type  application/octet-stream;
+keepalive_timeout  60;
+sendfile  on;
+gzip  on;
 
-    #将未绑定的域名全部指向fp.memeing.cn
-    server {
-        listen 80 default;
-        rewrite ^(.*) http://fp.memeing.cn$1 permanent;
-    }
+#将未绑定的域名全部指向memeing.cn
+server {
+listen 80 default;
+rewrite ^(.*) http://memeing.cn$1 permanent;
+}
 
-    include sites-enabled/*;
+include sites-enabled/*;
 }
