--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,88 @@
-11
+<script type="text/javascript">
+  var myScroll;
+  function loaded() {
+    myScroll = new iScroll('wrapper', {
+      snap: true,
+      momentum: false,
+      hScrollbar: false,
+      onScrollEnd: function() {
+//        document.querySelector('#indicator > li.active').className = '';
+//        document.querySelector('#indicator > li:nth-child(' + (this.currPageX + 1) + ')').className = 'active';
+      }
+    });
+  }
+  document.addEventListener('DOMContentLoaded', loaded, false);
+</script>
+
+<header>
+  <div class="banner">
+    <div id="wrapper" style="overflow: hidden; ">
+      <div id="scroller">
+        <ul id="thelist">
+          <li>
+            <p></p><a href="#"><img src="<%= image_path 's1.jpg' %>" /></a>
+          </li>
+          <li>
+            <p></p><a href="#"><img src="<%= image_path 's2.jpg' %>" /></a>
+          </li>
+          <li>
+            <p></p><a href="#"><img src="<%= image_path 's3.jpg' %>" /></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div id="nav">
+    <div id="prev" onclick="javascript:myScroll.scrollToPage('prev', 0);"></div>
+    <!--<ul id="indicator">-->
+      <!--<li class="active"></li>-->
+      <!--<li></li>-->
+    <!--</ul>-->
+    <div id="next" onclick="javascript:myScroll.scrollToPage('next', 0, 400, 2);"></div>
+  </div>
+  <div class="clr"></div>
+</header>
+
+<script>
+  var count = document.getElementById("thelist").getElementsByTagName("img").length;
+  for (i = 0; i < count; i++) {
+    document.getElementById("thelist").getElementsByTagName("img").item(i).style.cssText = " width:" + document.body.clientWidth + "px";
+  }
+  document.getElementById("scroller").style.cssText = " width:" + document.body.clientWidth * count + "px";
+  setInterval(function() {
+    myScroll.scrollToPage('next', 0, 400, count);
+  }, 3500);
+  window.onresize = function() {
+    for (i = 0; i < count; i++) {
+      document.getElementById("thelist").getElementsByTagName("img").item(i).style.cssText = " width:" + document.body.clientWidth + "px";
+    }
+    document.getElementById("scroller").style.cssText = " width:" + document.body.clientWidth * count + "px";
+  };
+</script>
+
+<div class="content">
+  <a href="" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809673822754.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">雪佛兰车型</div>
+  </a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809673974739.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">预约试驾</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674157426.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">最新资讯</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674319154.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">车主关怀</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674461949.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">优惠活动</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674651404.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">联系销售</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674805918.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">预约保养</div>
+</a><a href="" data-role="none">
+  <div class="img" style="background:url(<%= image_path '13809674974016.png' %>) center no-repeat; background-size:contain;"></div>
+  <div class="text">联系我们</div>
+</a></div>
