--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>THXLWeChat</title>
+  <title>江苏天弘雪莱4S店</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, , maximum-scale=1.0, minimum-scale=1.0, user-scalable=1' />
+  <meta content="yes" name="apple-mobile-web-app-capable">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,6 +12,56 @@
 <body>
 
 <%= yield %>
+
+<div class="footer">
+  <a data-rel="back" data-role="none" class="back"><p></p></a>
+  <a data-role="none" href=""><p></p></a>
+  <a data-role="none" class="contect"><p></p></a>
+  <a data-role="none" class="links"><p></p></a>
+</div>
+
+<div class="touch" style="display:none">
+  <div class="touch-content">
+    <div class="touch-bj-1">
+      <a href="tel:13913850894" data-role="none">
+        <p class="icon tel"></p>
+        <p class="text">一键拨号</p>
+      </a>        </div>
+  </div>
+</div>
+
+<div class="sidebar">
+  <a href="" data-role="none">
+    <p class="text">微官网首页</p>
+    <p class="pic"></p>
+  </a>
+  <a href="" data-role="none">
+    <p class="text">雪佛兰车型</p>
+    <p class="pic"></p>
+  </a><a href="" data-role="none">
+  <p class="text">预约试驾</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">最新资讯</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">车主关怀</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">优惠活动</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">联系销售</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">预约保养</p>
+  <p class="pic"></p>
+</a><a href="" data-role="none">
+  <p class="text">联系我们</p>
+  <p class="pic"></p>
+</a></div>
+
+<div class="bj" style="display:none"></div>
 
 </body>
 </html>
