--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,7 @@
   };
 </script>
 
-<div class="content">
+<div class="content" style="margin-bottom: 50px">
   <a href="" data-role="none">
     <div class="img" style="background:url(<%= image_path '13809673822754.png' %>) center no-repeat; background-size:contain;"></div>
     <div class="text">雪佛兰车型</div>
