--- a/app/views/tool/weizhang.html.erb
+++ b/app/views/tool/weizhang.html.erb
@@ -9,11 +9,11 @@
   <form>
 
       <label>车牌号
-        <input type="text" placeholder="请输入车牌号：苏AXXXXX" name="licence">
+        <input type="text" placeholder="请输入车牌号：苏AXXXXX" name="licence" id="licence">
       </label>
 
       <label>发动机号后六位
-        <input type="text" placeholder="请输入发动机号后六位" name="engine_code">
+        <input type="text" placeholder="请输入发动机号后六位" name="engine_code" id="engine_code">
       </label>
 
       <a class="button expand" id="cha" style="margin-top: 30px;">查询</a>
@@ -22,5 +22,47 @@
 </div>
 
 <script>
+  var licence;
+  var engine_code;
 
+  $('#cha').click(function(){
+    licence = $('#licence').val();
+    engine_code = $('#engine_code').val();
+
+    if(licence == "" || engine_code == ""){
+      alert("请输入正确的车牌号及发动机后6位");
+    }else{
+      $.ajax({
+        type: 'POST',
+        url: '/tool/weizhang_result',
+        data: {licence:licence, engine_code:engine_code},
+        success: function(data){
+          if(data.job_status == 2){
+            setTimeout(get_job(), 2000);
+          }else{
+            alert(data.content);
+          }
+        },
+        dataType: 'json'
+      });
+    }
+
+  });
+
+
+  function get_job(){
+    $.ajax({
+      type: 'POST',
+      url: '/tool/weizhang_result',
+      data: {licence:licence, engine_code:engine_code},
+      success: function(data){
+        if(data.job_status == 2){
+          setTimeout(get_job(), 2000);
+        }else{
+          alert(data.content);
+        }
+      },
+      dataType: 'json'
+    });
+  }
 </script>
