--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,19 +1,145 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
  *= require_self
- *= require index
- *= require public
- *= require style
  */
 
 .main_body {
   margin: 5%;
+  margin-bottom: 50px;
+}
+
+body{
+  font-size:14px;
+  background: #F1F1F1;
+}
+
+* {
+  margin:0px;
+  padding:0px;
+}
+
+a{
+  text-decoration:none;
+}
+
+img{
+  border:0px;
+  width:100%;
+  height:auto;
+}
+
+ul{
+  list-style:none;
+}
+
+p{
+  margin: 15px;
+}
+
+.banner {
+  position: relative;
+  overflow: hidden;
+
+  .tip {
+    width: 100%;
+    height: 22px;
+    line-height: 22px;
+    padding: 10px 20px;
+    margin-bottom: 2px;
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-decoration: none;
+    color: #FFF;
+    background: rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+  }
+}
+
+/*---------头部列表框架-------*/
+.footer{ height:40px; position:fixed; bottom:0px; left:0px; z-index:100; width:100%;background:rgba(46, 49, 50, 0.81)}
+.footer a{ float:left; width:25%; display:block; height:40px; cursor:pointer; background:image-url('xt.png') right center no-repeat; background-size:contain;	}
+.footer a:last-child{ background:none;}
+.footer a p{width: 20px;height: 20px;position: relative;	background: image-url('weiba-icons.png') no-repeat;  margin:12px auto;}
+.footer a:first-child p{ background:image-url('pic_03.png') center no-repeat;}
+.footer a:nth-child(2) p{background:image-url('pic_07.png') center no-repeat;}
+.footer a:nth-child(3) p{background:image-url('pic_05.png') center no-repeat; }
+.footer a:last-child p{background:image-url('pic_09.png') center no-repeat;}
+
+
+/*---------脚部内容-------*/
+.footer{ line-height:40px; text-align:center; width:100%;}
+.footer-top{ color:#333; font-weight:bold;}
+.footer-bottom{ background:#333; color:#FFF; }
+.footer-bottom a{ color:#fff;}
+
+
+/*----------联系方式弹框内容---------------*/
+.bj{width:100%; height:100%; background:#000;  opacity:0.5; position:fixed; top:0px; z-index:4;}
+.touch-content{ width:250px; height:250px; position:fixed; top:50%; left:50%; margin-left:-125px; margin-top:-125px; z-index:9;}
+.touch-content p.text{ color:#fff; text-align:center; line-height:24px;}
+.touch-content p.text-img{ color:#fff; text-align:center; line-height:24px;}
+.touch-content p.icon{background: image-url('weiba-icons.png'); width:30px; height:30px; margin:0px auto;}
+
+/*<<<<<<<<<<<<<<<一个按钮显示方式>>>>>>>>>>>>>*/
+.touch-bj-1{ background:#000; width:100%; height:100%; position:absolute; left:0px; top:0px; border-radius:10px; opacity:0.7;}
+.touch-bj-1 a{ display:block; width:70px; height:65px; margin:0px auto ; position:relative; top:50%; margin-top:-30px;}
+/*<<<<<<<<<<<<<<<两个按钮显示方式>>>>>>>>>>>>>*/
+.touch-bj-2{ background:#000; width:100%; height:100%; position:absolute; left:0px; top:0px; border-radius:10px; opacity:0.7;}
+.touch-bj-2 a:first-child{ display:block; width:70px; height:65px; float:left; position:relative; top:50%; margin-top:-30px; margin-left:30px;}
+.touch-bj-2 a:last-child{ display:block; width:70px; height:65px; float:right; position:relative; top:50%; margin-top:-30px; margin-right:30px;}
+/*<<<<<<<<<<<<<<<三个按钮显示方式>>>>>>>>>>>>>*/
+.touch-bj-3{ background:#000; width:100%; height:100%; position:absolute; left:0px; top:0px; border-radius:10px; opacity:0.7;}
+.touch-bj-3 a:first-child{  display:block; width:70px; height:65px; position:relative; margin:40px auto 0px;}
+.touch-bj-3 a:nth-child(2){ display:block; width:70px; height:65px; float:left; position:relative; top:20%; margin-top:-30px; margin-left:30px;}
+.touch-bj-3 a:last-child{ display:block; width:70px; height:65px; float:right; position:relative; top:20%; margin-top:-30px; margin-right:30px;}
+/*<<<<<<<<<<<<<<<四个按钮显示方式>>>>>>>>>>>>>*/
+.touch-bj-4{ background:#000; width:100%; height:100%; position:absolute; left:0px; top:0px; border-radius:10px; opacity:0.7;}
+.touch-bj-4 a:first-child{  display:block; width:70px; height:65px; position:relative; margin:20px auto 0px;}
+.touch-bj-4 a:nth-child(2){ display:block; width:70px; height:65px; float:left; position:relative; top:20%; margin-top:-35px; margin-left:30px;}
+.touch-bj-4 a:nth-child(3){ display:block; width:70px; height:65px; float:right; position:relative; top:20%; margin-top:-35px; margin-right:30px;}
+.touch-bj-4 a:last-child{  display:block; width:70px; height:65px; position:relative; margin:90px auto 0px; clear:left;}
+
+
+/*----------侧边栏内容---------------*/
+.sidebar{ width:16em; position:fixed;bottom:40px;  min-height:320px; right:-100%; display:none;}
+.sidebar a{ display:block; clear:both; height:40px; line-height:40px; color:#fff;  box-shadow:1px 1px 1px #CCC;}
+.sidebar a:last-child{ box-shadow:none;}
+.sidebar p.text,.sidebar p.text-img{ float:left; margin-left:10px;}
+.sidebar p.pic{ float:right; background-image: url(icons-18-white.png) ;	background-position: 	-108px -1px; width:18px; height:18px;background-color: rgba(0,0,0,.4); border-radius:10px; margin-right:10px; margin-top:10px;}
+
+/*----------侧边栏内容颜色---------------*/
+.sidebar a{
+  background:-moz-linear-gradient(top,#434343,#333333);
+  background:-ms-linear-gradient(top,#434343,#333333);
+  background:-webkit-gradient(linear, 0 0, 0 100%, from(#1D1D1D), to(rgba(46, 49, 50, 0.81)));
+
+}
+
+/*icon坐标*/
+.touch-content p.tel{background-position:-64px 0px; background-repeat:no-repeat;}
+.touch-content p.map{background-position:-190px 0px; background-repeat:no-repeat;}
+
+.weiba-masklayer.black {
+  background-color: #000000;
+  opacity: 0;
+}
+
+/*幻灯片*/
+header{text-align:center;   position:relative;      overflow:hidden;}
+ul{ margin:0px; padding:0px;}
+#nav{ position:absolute; width:100%; height:20px; line-height:20px;   bottom:0px;}
+#nav{ float:left; margin-right:5%; opacity:1;}
+#nav ul li{ float:left; background:#fff; border-radius:10px; width:10px; height:10px; margin-left:10px; margin-top:5px; opacity:0.5;}
+#nav ul li.active{ background:#fff;opacity:1;}
+footer{ text-align:center; line-height:30px; background:#333}
+.black{}
+.banner{}
+.banner img{
+  width:100%;
+}
+.banner ul li{
+  float:left;
 }
