--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
+<%
+   content_for :styles do
+     stylesheet_link_tag 'index'
+   end
+%>
 <script type="text/javascript">
   var myScroll;
   function loaded() {
