--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= yield :styles %>
 </head>
 <body>
 
@@ -63,7 +64,7 @@
 </script>
 
 <div id="divProgress" style="text-align:center; display: none; position: fixed; top: 50%;  left: 50%;" >
-  <%= image_tag 'loading.gif', :width => 40, :height => 40 %>
+  <%= image_tag 'loading.gif', :style => 'width: 40px;height: 40px;margin-bottom: 10px;' %>
   <br />
   <a style="color: white;font-size: 16px;font-weight: bold"  id="wait_text">请稍后...</a>
 </div>
@@ -120,6 +121,8 @@
 </a></div>
 
 <div class="bj" style="display:none"></div>
+
+<%= yield :js %>
 
 </body>
 </html>
