--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,13 +25,13 @@
       <div id="scroller">
         <ul id="thelist">
           <li>
-            <p></p><a href="#"><img src="<%= image_path 's1.jpg' %>" /></a>
+            <a href="#"><img src="<%= image_path 's1.jpg' %>" /></a>
           </li>
           <li>
-            <p></p><a href="#"><img src="<%= image_path 's2.jpg' %>" /></a>
+            <a href="#"><img src="<%= image_path 's2.jpg' %>" /></a>
           </li>
           <li>
-            <p></p><a href="#"><img src="<%= image_path 's3.jpg' %>" /></a>
+            <a href="#"><img src="<%= image_path 's3.jpg' %>" /></a>
           </li>
         </ul>
       </div>
