--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
   <a data-rel="back" data-role="none" class="back"><p></p></a>
   <a data-role="none" href=""><p></p></a>
   <a data-role="none" class="contect"><p></p></a>
-  <a data-role="none" class="links"><p></p></a>
+  <a data-role="none" href="/"><p></p></a>
 </div>
 
 <div class="touch" style="display:none">
@@ -85,40 +85,10 @@
       <a href="tel:13913850894" data-role="none">
         <p class="icon tel"></p>
         <p class="text">一键拨号</p>
-      </a>        </div>
+      </a>
+    </div>
   </div>
 </div>
-
-<div class="sidebar">
-  <a href="" data-role="none">
-    <p class="text">微官网首页</p>
-    <p class="pic"></p>
-  </a>
-  <a href="" data-role="none">
-    <p class="text">雪佛兰车型</p>
-    <p class="pic"></p>
-  </a><a href="" data-role="none">
-  <p class="text">预约试驾</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">最新资讯</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">车主关怀</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">优惠活动</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">联系销售</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">预约保养</p>
-  <p class="pic"></p>
-</a><a href="" data-role="none">
-  <p class="text">联系我们</p>
-  <p class="pic"></p>
-</a></div>
 
 <div class="bj" style="display:none"></div>
 
