--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,7 @@ p{
   margin: 15px;
 }
 
-.banner {
+.tbanner {
   position: relative;
   overflow: hidden;
 
@@ -56,6 +56,10 @@ p{
     background: rgba(0, 0, 0, 0.4);
     overflow: hidden;
   }
+}
+
+.text_orange{
+  color: #FF7305!important;
 }
 
 /*---------头部列表框架-------*/
