--- a/app/assets/stylesheets/cars.css.scss
+++ b/app/assets/stylesheets/cars.css.scss
@@ -1,9 +1,15 @@
 /*
  *= require_self
  *= require su/views/list.min
+ *= require su/views/item.min
  *= require su/elements/button.min
  *= require su/collections/grid.min
  *= require su/elements/segment.min
  *= require su/elements/divider.min
+ *= require su/collections/table.min
+ *= require su/collections/menu.min
+ *= require su/elements/label.min
+ *= require su/modules/modal.min
+ *= require su/modules/dimmer.min
  */
 
