--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -5,7 +5,7 @@
 %>
 
 <div class="tbanner">
-  <%= image_tag 'banner/2.jpg' %>
+  <%= image_tag 'banner/3.jpg' %>
   <a class="tip">
     <span>
       雪佛兰车型
@@ -16,16 +16,17 @@
 <div class="main_body">
 
   <div class="ui selection list">
-
     <% @cars.each do |car| %>
-    <div class="item" style="text-align: right">
-      <img style="width: 40%;" src="<%= car.image %>">
-      <div class="content" style="">
-        <div class="header" style="font-size: 16px;"><%= car.name %><%= car.en.upcase %><br></div><br>
-        <span class="ico">￥</span><span class="text_orange" style="font-size: 18px;"><%= car.price %></span> 元起
-      </div>
-    </div>
-    <div class="ui section divider" style="margin-bottom: 0;margin-top: 0"></div>
+      <a href="<%= car_path(car.en) %>">
+        <div class="item" style="text-align: right">
+          <img style="width: 40%;" src="<%= car.image %>">
+          <div class="content" style="">
+            <div class="header" style="font-size: 16px;"><%= car.name %><%= car.en.upcase %><br></div><br>
+            <span class="ico">￥</span><span class="text_orange" style="font-size: 18px;"><%= car.price %></span> 元起
+          </div>
+        </div>
+      </a>
+      <div class="ui section divider" style="margin-bottom: 0;margin-top: 0"></div>
     <% end %>
   </div>
 
