--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
 </script>
 
 <div class="content" style="margin-bottom: 50px">
-  <a href="" data-role="none">
+  <a href="/cars" data-role="none">
     <div class="img" style="background:url(<%= image_path '13809673822754.png' %>) center no-repeat; background-size:contain;"></div>
     <div class="text">雪佛兰车型</div>
   </a><a href="" data-role="none">
