--- a/app/views/cars/detail.html.erb
+++ b/app/views/cars/detail.html.erb
@@ -21,13 +21,13 @@
 
   <div class="item">
     <img style="width: 40%;" src="<%= @car.image %>">
-    <div class="content" style="float: right">
-      <div class="header" style="font-size: 16px;width: 200px;"><%= @car.name %> <%= @car.model %><br></div><br>
-      <span class="ico">￥</span><span class="text_orange" style="font-size: 18px;"><%= @car.price %></span> 元起
+    <div class="content" style="float: right;width: 50%">
+      <div class="header" style="font-size: 16px;"><%= @car.name %> <%= @car.model %><br></div>
+      <span>￥</span><span class="text_orange" style="font-size: 18px;"><%= @car.price %></span> 元起
     </div>
   </div>
 
-  <div class="ui fluid three item menu">
+  <div class="ui fluid three item menu" style="margin-top: 20px">
     <a class="item active">配置参数</a>
     <a class="item" id="order">
       <div class="floating ui red label">Hot</div>
