--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>江苏天弘雪莱4S店</title>
+  <title>江苏天泓雪佛兰4S店</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, , maximum-scale=1.0, minimum-scale=1.0, user-scalable=1' />
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="HandheldFriendly" content="True">
+  <link href="/icon114.jpg" sizes="57x57" rel="apple-touch-icon">
+  <link href="/icon114.jpg" sizes="114x114" rel="apple-touch-icon">
+  <meta http-equiv="cleartype" content="on">
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
