--- a/app/assets/stylesheets/tool/weizhang.css.scss
+++ b/app/assets/stylesheets/tool/weizhang.css.scss
@@ -6,5 +6,7 @@
  *= require su/elements/label.min
  *= require su/collections/grid.min
  *= require su/elements/segment.min
+ *= require su/modules/dropdown.min
+ *= require su/elements/icon.min
  */
 
