--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,7 +80,7 @@
 <div class="footer">
   <a data-rel="back" data-role="none" class="back"><p></p></a>
   <a data-role="none" href=""><p></p></a>
-  <a data-role="none" class="contect" href="tel:13913850894"><p></p></a>
+  <a data-role="none" class="contect" href="/contact/show"><p></p></a>
   <a data-role="none" href="/"><p></p></a>
 </div>
 
