--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,23 +79,10 @@
 
 <div class="footer">
   <a data-rel="back" data-role="none" class="back"><p></p></a>
-  <a data-role="none" href=""><p></p></a>
+  <a data-role="none" href="/tool/care"><p></p></a>
   <a data-role="none" class="contect" href="/contact/show"><p></p></a>
   <a data-role="none" href="/"><p></p></a>
 </div>
-
-<div class="touch" style="display:none">
-  <div class="touch-content">
-    <div class="touch-bj-1">
-      <a href="tel:13913850894" data-role="none">
-        <p class="icon tel"></p>
-        <p class="text">一键拨号</p>
-      </a>
-    </div>
-  </div>
-</div>
-
-<div class="bj" style="display:none"></div>
 
 <%= yield :js %>
 
