--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,25 +69,33 @@
   <a href="/cars" data-role="none">
     <div class="img" style="background:url(<%= image_path '13809673822754.png' %>) center no-repeat; background-size:contain;"></div>
     <div class="text">雪佛兰车型</div>
-  </a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809673974739.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">预约试驾</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674157426.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">最新资讯</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674319154.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">车主关怀</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674461949.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">优惠活动</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674651404.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">联系销售</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674805918.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">预约保养</div>
-</a><a href="" data-role="none">
-  <div class="img" style="background:url(<%= image_path '13809674974016.png' %>) center no-repeat; background-size:contain;"></div>
-  <div class="text">联系我们</div>
-</a></div>
+  </a>
+  <a href="/order/drive" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809673974739.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">预约试驾</div>
+  </a>
+  <a href="" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674157426.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">最新资讯</div>
+  </a>
+  <a href="/tool/care" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674319154.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">车主关怀</div>
+  </a>
+  <a href="" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674461949.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">优惠活动</div>
+  </a>
+  <a href="/tool/bx_cal" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674651404.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">计算工具</div>
+  </a>
+  <a href="/order/care" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674805918.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">预约保养</div>
+  </a>
+  <a href="/contact/show" data-role="none">
+    <div class="img" style="background:url(<%= image_path '13809674974016.png' %>) center no-repeat; background-size:contain;"></div>
+    <div class="text">联系销售</div>
+  </a>
+</div>
