--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>江苏天泓雪佛兰4S店</title>
+  <title>江苏天泓雪莱</title>
   <meta name='viewport' content='width=device-width, initial-scale=1.0, , maximum-scale=1.0, minimum-scale=1.0, user-scalable=1' />
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
