--- a/config/recipes/templates/nginx_unicorn.erb
+++ b/config/recipes/templates/nginx_unicorn.erb
@@ -14,7 +14,9 @@ server {
     add_header Cache-Control public;
   }
 
-  location / {
+
+  try_files $uri/index.html $uri @unicorn_<%= application %>;
+  location @unicorn_<%= application %> {
     default_type text/html;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
