--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -4,7 +4,7 @@
 
   <!-- start: Meta -->
   <meta charset="utf-8" />
-  <title>ACME Dashboard - Perfect Bootstrap Admin Template</title>
+  <title>天泓雪莱微信后台</title>
   <!-- end: Meta -->
 
   <!-- start: Mobile Specific -->
@@ -37,73 +37,15 @@
   <span class="icon-bar"></span>
   <span class="icon-bar"></span>
 </a>
-<a class="brand" href="index.html"><span>Acme, Inc</span></a>
+<a class="brand" href="index.html"><span>天泓雪莱微信后台</span></a>
 
 <!-- start: Header Menu -->
 <div class="nav-no-collapse header-nav">
 <ul class="nav pull-right">
 <li class="dropdown hidden-phone">
-  <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-    <i class="halflings-icon white warning-sign"></i>
+  <a class="btn" href="/admin/sign_out">
+    退出登录
   </a>
-  <ul class="dropdown-menu notifications">
-    <li>
-      <span class="dropdown-menu-title">You have 11 notifications</span>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white user"></i> <span class="message">New user registration</span> <span class="time">1 min</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white comment"></i> <span class="message">New comment</span> <span class="time">7 min</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white comment"></i> <span class="message">New comment</span> <span class="time">8 min</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white comment"></i> <span class="message">New comment</span> <span class="time">16 min</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white user"></i> <span class="message">New user registration</span> <span class="time">36 min</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white cart"></i> <span class="message">2 items sold</span> <span class="time">1 hour</span>
-      </a>
-    </li>
-    <li class="warning">
-      <a href="#">
-        - <i class="halflings-icon white user"></i> <span class="message">User deleted account</span> <span class="time">2 hour</span>
-      </a>
-    </li>
-    <li class="warning">
-      <a href="#">
-        - <i class="halflings-icon white shopping-cart"></i> <span class="message">Transaction was canceled</span> <span class="time">6 hour</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white comment"></i> <span class="message">New comment</span> <span class="time">yesterday</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        + <i class="halflings-icon white user"></i> <span class="message">New user registration</span> <span class="time">yesterday</span>
-      </a>
-    </li>
-    <li>
-      <a class="dropdown-menu-sub-footer">View all notifications</a>
-    </li>
-  </ul>
 </li>
 </ul>
 </div>
@@ -122,29 +64,15 @@
 <div id="sidebar-left" class="span1">
   <div class="nav-collapse sidebar-nav">
     <ul class="nav nav-tabs nav-stacked main-menu">
-      <li><a href="/admin"><i class="fa-icon-bar-chart"></i><span class="hidden-tablet"> Dashboard</span></a></li>
-      <li><a href="infrastructure.html"><i class="fa-icon-hdd"></i><span class="hidden-tablet"> Infrastructure</span></a></li>
-      <li><a href="messages.html"><i class="fa-icon-envelope"></i><span class="hidden-tablet"> Messages</span></a></li>
-      <li><a href="tasks.html"><i class="fa-icon-tasks"></i><span class="hidden-tablet"> Tasks</span></a></li>
-      <li><a href="ui.html"><i class="fa-icon-eye-open"></i><span class="hidden-tablet"> UI Features</span></a></li>
-      <li><a href="widgets.html"><i class="fa-icon-dashboard"></i><span class="hidden-tablet"> Widgets</span></a></li>
-      <li>
-        <a class="dropmenu" href="#"><i class="fa-icon-folder-close-alt"></i><span class="hidden-tablet"> Dropdown</span></a>
-        <ul>
-          <li><a class="submenu" href="submenu1.html"><i class="fa-icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 1</span></a></li>
-          <li><a class="submenu" href="submenu2.html"><i class="fa-icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 2</span></a></li>
-          <li><a class="submenu" href="submenu3.html"><i class="fa-icon-file-alt"></i><span class="hidden-tablet"> Sub Menu 3</span></a></li>
-        </ul>
-      </li>
-      <li><a href="form.html"><i class="fa-icon-edit"></i><span class="hidden-tablet"> Forms</span></a></li>
-      <li><a href="chart.html"><i class="fa-icon-list-alt"></i><span class="hidden-tablet"> Charts</span></a></li>
-      <li><a href="typography.html"><i class="fa-icon-font"></i><span class="hidden-tablet"> Typography</span></a></li>
-      <li><a href="gallery.html"><i class="fa-icon-picture"></i><span class="hidden-tablet"> Gallery</span></a></li>
-      <li><a href="table.html"><i class="fa-icon-align-justify"></i><span class="hidden-tablet"> Tables</span></a></li>
-      <li><a href="calendar.html"><i class="fa-icon-calendar"></i><span class="hidden-tablet"> Calendar</span></a></li>
-      <li><a href="file-manager.html"><i class="fa-icon-folder-open"></i><span class="hidden-tablet"> File Manager</span></a></li>
-      <li><a href="icon.html"><i class="fa-icon-star"></i><span class="hidden-tablet"> Icons</span></a></li>
-      <li><a href="login.html"><i class="fa-icon-lock"></i><span class="hidden-tablet"> Login Page</span></a></li>
+      <li><a href="/admin"><i class="fa-icon-bar-chart"></i><span class="hidden-tablet"> 预约保养</span></a></li>
+      <li><a href="/admin/order_drive"><i class="fa-icon-hdd"></i><span class="hidden-tablet"> 预约试驾</span></a></li>
+      <li><a href="/admin/user_car"><i class="fa-icon-envelope"></i><span class="hidden-tablet"> 车主关怀</span></a></li>
+      <li><a href="/admin/evaluate"><i class="fa-icon-tasks"></i><span class="hidden-tablet"> 满意度评价</span></a></li>
+      <li><a href="/admin/contacts"><i class="fa-icon-eye-open"></i><span class="hidden-tablet"> 联系方式</span></a></li>
+      <li><a href="widgets.html"><i class="fa-icon-dashboard"></i><span class="hidden-tablet"> 最新资讯</span></a></li>
+      <li><a href="form.html"><i class="fa-icon-edit"></i><span class="hidden-tablet"> 优惠活动</span></a></li>
+      <li><a href="typography.html"><i class="fa-icon-font"></i><span class="hidden-tablet"> 车展团购</span></a></li>
+      <li><a href="gallery.html"><i class="fa-icon-picture"></i><span class="hidden-tablet"> 滚动图</span></a></li>
     </ul>
   </div>
 </div>
@@ -154,7 +82,7 @@
 <!-- start: Content -->
 <div id="content" class="span11">
 
-  cont
+  <%= yield %>
 
 
 </div>
@@ -168,7 +96,7 @@
 <footer>
   <p>
     <span style="text-align:left;float:left">&copy; 2014 <a>江苏天泓雪莱</a></span>
-    <span class="hidden-phone" style="text-align:right;float:right">Powered by: <a>Raymond</a></span>
+    <span class="hidden-phone" style="text-align:right;float:right">Powered by: <a>Raymond</a> 技术咨询QQ 77916039</span>
   </p>
 </footer>
 
