--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -69,10 +69,10 @@
       <li><a href="/admin/user_car"><i class="fa-icon-envelope"></i><span class="hidden-tablet"> 车主关怀</span></a></li>
       <li><a href="/admin/evaluate"><i class="fa-icon-tasks"></i><span class="hidden-tablet"> 满意度评价</span></a></li>
       <li><a href="/admin/contacts"><i class="fa-icon-eye-open"></i><span class="hidden-tablet"> 联系方式</span></a></li>
-      <li><a href="widgets.html"><i class="fa-icon-dashboard"></i><span class="hidden-tablet"> 最新资讯</span></a></li>
-      <li><a href="form.html"><i class="fa-icon-edit"></i><span class="hidden-tablet"> 优惠活动</span></a></li>
-      <li><a href="typography.html"><i class="fa-icon-font"></i><span class="hidden-tablet"> 车展团购</span></a></li>
-      <li><a href="gallery.html"><i class="fa-icon-picture"></i><span class="hidden-tablet"> 滚动图</span></a></li>
+      <li><a href="/admin/news"><i class="fa-icon-dashboard"></i><span class="hidden-tablet"> 最新资讯</span></a></li>
+      <li><a href="/admin/activities"><i class="fa-icon-edit"></i><span class="hidden-tablet"> 优惠活动</span></a></li>
+      <li><a href="/admin/tuans"><i class="fa-icon-font"></i><span class="hidden-tablet"> 车展团购</span></a></li>
+      <li><a href="/admin/ads"><i class="fa-icon-picture"></i><span class="hidden-tablet"> 滚动图</span></a></li>
     </ul>
   </div>
 </div>
