--- a/app/views/tool/care.html.erb
+++ b/app/views/tool/care.html.erb
@@ -13,6 +13,35 @@
 </div>
 <div class="main_body">
 
+  <div class="ui divided list">
+    <div class="item">
+      <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODI3ODI4MA==&mid=274183248&idx=1&sn=f7fae8e534900f1526491041ffc8dc2f&scene=1&from=singlemessage&isappinstalled=0#rd">
+      <div class="right floated tiny teal ui button">阅读</div>
+      <div class="content">
+        <div class="header" style="color: #D58426;">【针对性解决】发动机的8大磨损</div>
+      </div>
+      </a>
+    </div>
+
+    <div class="item">
+      <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODI3ODI4MA==&mid=273395249&idx=2&sn=bf6cd9edfb8ceb32640601fd31ba2ebe&scene=1&from=singlemessage&isappinstalled=0#rd">
+        <div class="right floated tiny teal ui button">阅读</div>
+        <div class="content">
+          <div class="header" style="color: #D58426;">【车主必读】“私家车6年免检”五大误区</div>
+        </div>
+      </a>
+    </div>
+
+    <div class="item">
+      <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODI3ODI4MA==&mid=272057946&idx=1&sn=29aa5763bceb83084ae334589c8de1ec&scene=1&from=singlemessage&isappinstalled=0#rd">
+        <div class="right floated tiny teal ui button">阅读</div>
+        <div class="content">
+          <div class="header" style="color: #D58426;">有效延长汽车寿命的保养技巧</div>
+        </div>
+      </a>
+    </div>
+  </div>
+
   <a class="ui submit button attached" href="/tool/care_edit">修改您的爱车信息</a>
 
 
