--- a/app/assets/stylesheets/tool/weizhang.css.scss
+++ b/app/assets/stylesheets/tool/weizhang.css.scss
@@ -7,6 +7,7 @@
  *= require su/collections/grid.min
  *= require su/elements/segment.min
  *= require su/modules/dropdown.min
+ *= require su/views/list.min
  *= require su/elements/icon.min
  */
 
